# vibercizing

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.claude-plugin/: marketplace.json
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/components/: LifetimeStats.tsx  RepCounter.tsx  RequestBalance.tsx  Toast.tsx  WebcamFeed.tsx
client/src/lib/: exercises.test.ts  exercises.ts  mediapipe.ts  websocket.test.ts  websocket.ts
client/src/store/: useStore.test.ts  useStore.ts
docs/plans/: 2025-01-05-vibercizing-design.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/hooks/scripts/: check-requests.py
server/: main.py  pyproject.toml
server/server/: __init__.py  database.py  exercises.py  main.py  models.py
server/tests/: __init__.py  test_api.py  test_database.py  test_websocket.py
server/vibercizing_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
